# judou

./: .gitignore  AGENTS.md  CLAUDE.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
docs/: 01_产品手册_句读.md  02_架构方案_句读.md  03_开发路线图与里程碑.md  04_测试策略_TDD.md  05_schema.sql  06_IPC接口契约.md  07_提示词模板.md  08_架构决策记录_ADR.md
docs/design/: README.md  句读 Design Spec.dc.html
fixtures/epub/: Inside the Box - David Epstein.epub
reference/: .thumbnail  tokens.css  句读 Prototype.dc.html
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: clock.rs  commands.rs  db.rs  error.rs  lib.rs  llm.rs  main.rs  tts.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/ingest/: epub.rs  import.rs  mod.rs
src-tauri/src/repo/: mod.rs
src-tauri/src/segment/: mod.rs
src-tauri/tests/: epub_phase1.rs  phase0.rs  reader_phase3.rs  segment_phase2.rs
src/__tests__/: ImportPanel.test.ts  ProcessingLogPanel.test.ts  ReaderPanel.test.ts  importEpub.test.ts  ping.test.ts
src/api/: importEpub.ts  ping.ts  processingLog.ts  reader.ts
src/components/: ImportPanel.vue  ProcessingLogPanel.vue  ReaderPanel.vue
