[package]
name = "judou"
version = "0.1.0"
edition = "2021"

[lib]
name = "judou_lib"
path = "src/lib.rs"

[[bin]]
name = "judou"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
quick-xml = "0.39"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }
zip = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
